# english_learner_bot

./: README.md
bot_lambda/: Cargo.toml  README.md
bot_lambda/data/: jev+hev.csv
bot_lambda/src/: main.rs
terraform/: .gitignore  README.md
terraform/infra/: main.tf
terraform/secrets/: main.tf
