[package]
name = "src"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { version = "1.0.77", features = ["backtrace"] }
async-std = { version = "1.12.0", features = [] }
aws-config = "1.1.1"
aws-sdk-secretsmanager = "1.11.0"
lambda_runtime = "0.9.0"
log = "0.4.20"
reqwest = { version = "0.11.23", default-features = false, features = ["rustls", "rustls-tls", "cookies", "serde_json", "json", "gzip"] }
scraper = "0.18.1"
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.108"
simple-logging = "2.0.2"
tokio = { version = "1.35.1", features = ["macros", "rt-multi-thread"] }
rand = "0.8.5"
tokio-test = "0.4.3"
